[gd_scene load_steps=33 format=3 uid="uid://dvirkprp27esk"]

[ext_resource type="Script" uid="uid://c51w6fej3xoj8" path="res://main.gd" id="1_1bvp3"]
[ext_resource type="Texture2D" uid="uid://cbr35jw1ini0n" path="res://Assets/computer/background.png" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://byliescwogrja" path="res://icon.svg" id="2_0xm2m"]
[ext_resource type="Texture2D" uid="uid://c3tt5mmmcmuht" path="res://Assets/room/background.png" id="3_h2yge"]
[ext_resource type="Script" uid="uid://cyfr87o7pl1ka" path="res://room_view.gd" id="4_4c57u"]
[ext_resource type="Script" uid="uid://dsrh1ibw1vpv1" path="res://dialog.gd" id="5_lquwl"]
[ext_resource type="Texture2D" uid="uid://cuvlv6qbcnfwn" path="res://Assets/computer/Computer.png" id="5_yaehf"]
[ext_resource type="Texture2D" uid="uid://mcfhjpxif063" path="res://Assets/computer/Hands.png" id="6_074og"]
[ext_resource type="Texture2D" uid="uid://2woeniy1js70" path="res://Assets/computer/hochberg/Happy.png" id="6_cegan"]
[ext_resource type="Texture2D" uid="uid://dx7klt3nw3i4i" path="res://Assets/computer/hochberg/Grump.png" id="7_82xsv"]
[ext_resource type="Texture2D" uid="uid://dxamph3nk3xbi" path="res://Assets/room/backgroundobjects/machine_background.png" id="7_vivmo"]
[ext_resource type="Texture2D" uid="uid://b2wt1ttugf3il" path="res://Assets/room/door.png" id="8_efxa6"]
[ext_resource type="Texture2D" uid="uid://bv0vekf0f2m61" path="res://Assets/computer/hochberg/Turn.png" id="8_getpj"]
[ext_resource type="Texture2D" uid="uid://bbd4t6wx1gvja" path="res://cat/spinny.png" id="8_ycdy4"]
[ext_resource type="Texture2D" uid="uid://cjh483xgsqgxj" path="res://cat/scratch.png" id="11_yaehf"]
[ext_resource type="Texture2D" uid="uid://bbvcsp3i2vd13" path="res://cat/poke.png" id="13_2cqfq"]
[ext_resource type="Texture2D" uid="uid://dl6wekmg5p32" path="res://cat/idle.png" id="13_w48qg"]
[ext_resource type="Texture2D" uid="uid://clggldfmvli1w" path="res://Assets/room/backgroundobjects/window.png" id="14_getpj"]
[ext_resource type="Texture2D" uid="uid://dy1gf2f44hefg" path="res://Assets/room/backgroundobjects/torn_window.png" id="15_ryguw"]
[ext_resource type="Texture2D" uid="uid://b6s7qf28y4tyb" path="res://Assets/room/backgroundobjects/burnt_outlet.png" id="17_82xsv"]
[ext_resource type="Texture2D" uid="uid://c1o0jy8f2g2fx" path="res://Assets/room/backgroundobjects/outlet.png" id="18_getpj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ryguw"]
atlas = ExtResource("6_cegan")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_d13ii"]
atlas = ExtResource("7_82xsv")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u8w0"]
atlas = ExtResource("8_getpj")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="SpriteFrames" id="SpriteFrames_w48qg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryguw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d13ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u8w0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_a6jrf"]
atlas = ExtResource("14_getpj")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuqvo"]
atlas = ExtResource("15_ryguw")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="SpriteFrames" id="SpriteFrames_qsp4k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6jrf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuqvo")
}],
"loop": true,
"name": &"torn",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_0odxb"]
atlas = ExtResource("17_82xsv")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_lswn8"]
atlas = ExtResource("18_getpj")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="SpriteFrames" id="SpriteFrames_a6jrf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0odxb")
}],
"loop": true,
"name": &"burnt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lswn8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_lquwl"]
width = 128
height = 128

[node name="Main" type="Node2D"]
script = ExtResource("1_1bvp3")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ComputerView" type="Node2D" parent="."]

[node name="BackgroundSprite" type="Sprite2D" parent="ComputerView"]
texture = ExtResource("1_ig7tw")

[node name="HBoxContainer" type="HBoxContainer" parent="ComputerView"]
offset_left = -263.0
offset_top = 357.0
offset_right = 261.0
offset_bottom = 485.0

[node name="MuteButton" type="TextureButton" parent="ComputerView/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_0xm2m")

[node name="LeaveCall" type="TextureButton" parent="ComputerView/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_0xm2m")

[node name="CameraButton" type="TextureButton" parent="ComputerView/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_0xm2m")

[node name="ShareScreen" type="TextureButton" parent="ComputerView/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_0xm2m")

[node name="Computer" type="Sprite2D" parent="ComputerView"]
position = Vector2(4, 208)
texture = ExtResource("5_yaehf")

[node name="Hands" type="Sprite2D" parent="ComputerView"]
position = Vector2(-6, 276)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_074og")

[node name="Hochberg" type="AnimatedSprite2D" parent="ComputerView"]
position = Vector2(-188, -171)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_w48qg")

[node name="RoomView" type="Node2D" parent="."]
visible = false
script = ExtResource("4_4c57u")

[node name="BackgroundSprite" type="Sprite2D" parent="RoomView"]
texture = ExtResource("3_h2yge")

[node name="WashingMachine" type="Node2D" parent="RoomView"]
position = Vector2(-673, 124)

[node name="Machine" type="TextureButton" parent="RoomView/WashingMachine"]
offset_left = -163.0
offset_top = -306.0
offset_right = 1885.0
offset_bottom = 1742.0
scale = Vector2(0.3, 0.349)
texture_normal = ExtResource("7_vivmo")

[node name="Sprite2D" type="Sprite2D" parent="RoomView/WashingMachine"]
position = Vector2(135, 151)
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_ycdy4")

[node name="MachineCat" type="TextureButton" parent="RoomView/WashingMachine/Sprite2D"]
anchors_preset = -1
anchor_left = -0.0603841
anchor_top = -0.0520833
anchor_right = 0.00846356
anchor_bottom = -0.020345
offset_left = -313.333
offset_top = -103.333
offset_right = 1734.67
offset_bottom = 1944.67
scale = Vector2(0.365597, 0.381965)
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="machine_door" type="TextureButton" parent="RoomView/WashingMachine"]
visible = false
offset_top = 25.0
offset_right = 256.0
offset_bottom = 281.0
texture_normal = ExtResource("8_efxa6")

[node name="Window" type="Node2D" parent="RoomView"]
position = Vector2(543, -55)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="RoomView/Window"]
position = Vector2(60, 178)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_qsp4k")

[node name="WindowCat" type="TextureButton" parent="RoomView/Window"]
offset_left = -242.0
offset_top = -222.0
offset_right = 1806.0
offset_bottom = 1826.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("11_yaehf")

[node name="Outlet" type="Node2D" parent="RoomView"]
position = Vector2(198, 245)

[node name="OutletCat" type="TextureButton" parent="RoomView/Outlet"]
offset_left = -551.0
offset_top = -274.0
offset_right = 1497.0
offset_bottom = 1774.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("13_2cqfq")

[node name="OutletSprite" type="AnimatedSprite2D" parent="RoomView/Outlet"]
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_a6jrf")

[node name="IdleCat" type="TextureButton" parent="RoomView"]
offset_left = -713.0
offset_top = -313.0
offset_right = 1335.0
offset_bottom = 1735.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("13_w48qg")

[node name="TurnAround" type="TextureButton" parent="."]
offset_left = 823.0
offset_top = 411.0
offset_right = 951.0
offset_bottom = 539.0
texture_normal = ExtResource("2_0xm2m")

[node name="Dialog" type="Node2D" parent="."]
visible = false
position = Vector2(456, -219)
script = ExtResource("5_lquwl")

[node name="ColorRect" type="ColorRect" parent="Dialog"]
offset_left = 114.0
offset_top = -221.0
offset_right = 505.0
offset_bottom = 182.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="Dialog/ColorRect"]
layout_mode = 0
offset_right = 390.0
offset_bottom = 240.0
theme_override_font_sizes/font_size = 50
text = "words words words"
autowrap_mode = 2
clip_text = true

[node name="Label2" type="Label" parent="Dialog/ColorRect"]
layout_mode = 0
offset_left = 4.0
offset_top = 207.0
offset_right = 384.0
offset_bottom = 400.0
theme_override_font_sizes/font_size = 50
text = "default"
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Dialog"]
offset_left = 113.0
offset_top = 183.0
offset_right = 505.0
offset_bottom = 311.0

[node name="TextureButton" type="TextureButton" parent="Dialog/HBoxContainer"]
layout_mode = 2
texture_normal = SubResource("NoiseTexture2D_lquwl")
texture_disabled = ExtResource("2_0xm2m")

[node name="Label" type="Label" parent="Dialog/HBoxContainer/TextureButton"]
layout_mode = 0
offset_left = 58.0
offset_top = 48.0
offset_right = 98.0
offset_bottom = 97.0
text = "1
"

[node name="TextureButton2" type="TextureButton" parent="Dialog/HBoxContainer"]
layout_mode = 2
texture_normal = SubResource("NoiseTexture2D_lquwl")
texture_disabled = ExtResource("2_0xm2m")

[node name="Label" type="Label" parent="Dialog/HBoxContainer/TextureButton2"]
layout_mode = 0
offset_left = 58.0
offset_top = 48.0
offset_right = 98.0
offset_bottom = 97.0
text = "2
"

[node name="TextureButton3" type="TextureButton" parent="Dialog/HBoxContainer"]
layout_mode = 2
texture_normal = SubResource("NoiseTexture2D_lquwl")
texture_disabled = ExtResource("2_0xm2m")

[node name="Label" type="Label" parent="Dialog/HBoxContainer/TextureButton3"]
layout_mode = 0
offset_left = 58.0
offset_top = 48.0
offset_right = 98.0
offset_bottom = 97.0
text = "3
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="button_down" from="ComputerView/HBoxContainer/MuteButton" to="." method="_on_mute_button_button_down"]
[connection signal="button_down" from="ComputerView/HBoxContainer/LeaveCall" to="." method="_on_leave_call_button_down"]
[connection signal="button_down" from="ComputerView/HBoxContainer/CameraButton" to="." method="_on_camera_button_button_down"]
[connection signal="button_down" from="ComputerView/HBoxContainer/ShareScreen" to="." method="_on_share_screen_button_down"]
[connection signal="button_down" from="RoomView/WashingMachine/Sprite2D/MachineCat" to="RoomView" method="_on_machine_cat_button_down"]
[connection signal="button_down" from="RoomView/WashingMachine/machine_door" to="RoomView" method="_on_machine_door_button_down"]
[connection signal="button_down" from="RoomView/Window/WindowCat" to="RoomView" method="_on_window_cat_button_down"]
[connection signal="button_down" from="RoomView/Outlet/OutletCat" to="RoomView" method="_on_outlet_cat_button_down"]
[connection signal="button_down" from="TurnAround" to="." method="_on_turn_around_button_down"]
[connection signal="button_down" from="Dialog/HBoxContainer/TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_down" from="Dialog/HBoxContainer/TextureButton2" to="." method="_on_texture_button_2_button_down"]
[connection signal="button_down" from="Dialog/HBoxContainer/TextureButton3" to="." method="_on_texture_button_3_button_down"]
